feat: Add swagger admin coupon request body
